FIXED THE ROTATING TEXT, on mobile it pushed the whole site up and down like an earthquake. Was annoying as hell

--- a/includes/styles.css
+++ b/includes/styles.css
@@ -31,7 +31,9 @@ body {
 /*    background: linear-gradient(#4d0000, #ffe6e6); /* Standard syntax (must be last) */
 /*    background-attachment: fixed;*/
 
-
+#fixedHeight {
+	height: 40px;
+}
 
 
 h1 {
